[gd_scene load_steps=3 format=3 uid="uid://bxvw8y7qkqx2"]

[ext_resource type="Script" path="res://actors/CollectibleFruit.gd" id="1_fruit"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fruit"]
radius = 12.0

[node name="CollectibleFruit" type="Area2D"]
script = ExtResource("1_fruit")

[node name="FruitSprite" type="ColorRect" parent="."]
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
color = Color(1, 0, 0, 1)

[node name="FruitLabel" type="Label" parent="."]
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
theme_override_font_sizes/font_size = 12
text = "üçé"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_fruit")